<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KnowledgeBase</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="create_password">Create password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="enter_password">Enter password</string>
    <string name="title_activity_edit">Edit entry</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="done">Done</string>
    <string name="snackbar_confirm">Got it</string>
    <string name="title_activity_view">View entry</string>
    <string name="edit">Edit</string>
    <string name="search_hint">Search entries</string>
    <string name="title_activity_search">Search Results</string>
    <string name="search">Search</string>
    <string name="title_activity_backup">Backup</string>
    <string name="server_online">Server online</string>
    <string name="server_offline">Server offline</string>
    <string name="server_checking">Checking for server...</string>
    <string name="restore">Restore selected</string>
    <string name="title_text_missing">Title and/or text missing</string>
    <string name="delete">Delete</string>
    <string name="passwords_not_same">Passwords not the same</string>
    <string name="saving">Saving</string>
    <string name="saving_password">Saving password</string>
    <string name="checking">Checking</string>
    <string name="checking_password">Checking password</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="reading">Reading</string>
    <string name="decrypting">Decrypting</string>
    <string name="crunching">Crunching data</string>
    <string name="writing">Writing</string>
    <string name="encrypting">Encrypting</string>
    <string name="reenter_password">Reenter your password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="address_title">Server address</string>
    <string name="address_msg">Enter the server\'s IP address</string>
    <string name="server_noaddress">No server address</string>
    <string name="set_address">Set address</string>
    <string name="uploading_long">Uploading encrypted data</string>
    <string name="store_success">Backup uploaded successfully</string>
    <string name="no_store">Data could not be stored</string>
    <string name="uploading">Uploading</string>
    <string name="downloading">Downloading</string>
    <string name="download_from_server">Downloading selected backup from server</string>
    <string name="restored">Restored from backup</string>
    <string name="confirm_delete">Do you want to remove this backup from the server?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deleted">Backup removed from server</string>
    <string name="contacting">Contacting server</string>
    <string name="asking_remove">Asking server to remove backup</string>

</resources>
