<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.martin.knowledgebase.MainActivity">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_white_48dp"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_lock_white_48dp"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/save" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/title_activity_backup" />
</menu>
