<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.martin.knowledgebase.BackupActivity">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bSetAddress"
        android:text="@string/set_address"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_noaddress"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:layout_alignBaseline="@id/bSetAddress"/>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/bBackup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_backup" />

        <Button
            android:id="@+id/bRestore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/restore" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBackups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llButtons"
        android:layout_below="@id/bSetAddress"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

</RelativeLayout>
